--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -100,7 +100,7 @@ flutter:
   assets:
     - assets/
     - .env
-    - .env.*
+    - .env.development
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
